k8s/eventapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventapp
  labels:
    app: eventapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eventapp
  template:
    metadata:
      labels:
        app: eventapp
    spec:
      containers:
        - name: eventapp
          image: ECR_REGISTRY/soct-eventapp:LATEST_SHA
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: eventapp
spec:
  selector:
    app: eventapp
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
