k8s/eventapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventapp-deployment
  labels:
    app: eventapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eventapp
  template:
    metadata:
      labels:
        app: eventapp
    spec:
      containers:
      - name: eventapp
        image: registry.digitalocean.com/soct-registry/eventapp:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: event-data-volume
          mountPath: /app/data
        livenessProbe:
          httpGet:
            path: /api/events
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
      volumes:
      - name: event-data-volume
        persistentVolumeClaim:
          claimName: event-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: eventapp-service
spec:
  selector:
    app: eventapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
